Enable preview features to make Java 14 example more compelling (#6)